Merapikan form-select jenis kelamin di Customer Details dan tambahkan tombol batal. Memindahkan route ke produk detail.

--- a/public/frontend/css/style-customerdetail.css
+++ b/public/frontend/css/style-customerdetail.css
@@ -1,7 +1,7 @@
 /* Basic Styles */
 body {
   background-color: #F8F8F8;
-  color: #FF4DA3; /* Dark Brown */
+  color: #FF4DA3; 
 }
 
 /* User Detail Section */
@@ -23,7 +23,7 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  border: 3px solid #FF4DA3; /* Pink border */
+  border: 3px solid #FF4DA3; 
 }
 
 /* Form Styles */
@@ -35,17 +35,19 @@ body {
   display: block;
   font-size: 16px;
   margin-bottom: 8px;
-  color: #3E2723; /* Dark Brown */
+  color: #3E2723; 
 }
 
 .form-control {
   width: 100%;
-  padding: 12px;
+  padding: 8px;
+  line-height: 1.5;
+  height: auto;
   border-radius: 4px;
-  border: 1px solid #D1C4E9; /* Light Purple Border */
+  border: 1px solid #D1C4E9; 
   background-color: #ffffff;
   font-size: 16px;
-  color: #3E2723; /* Dark Brown Text */
+  color: #3E2723; 
 }
 
 .form-control:disabled {
