--- a/public/frontend/css/style-detailproduk.css
+++ b/public/frontend/css/style-detailproduk.css
@@ -26,6 +26,7 @@
     margin-bottom: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-size: cover;
 }
 
 /* Product Info */
