--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -577,11 +577,11 @@ h1 {
 
 .hero__items {
 	width: 100%;
-    height: 665px; 
-    padding-top: 130px;
-    padding-bottom: 40px;
-    background-size: cover;
-	position: relative;
+    height: 100vh; 
+    background-size: cover; 
+    background-position: top center; 
+    background-repeat: no-repeat; 
+    position: relative;
 } 
 
 .hero__text h6 {
@@ -768,7 +768,7 @@ h1 {
         position: relative;
         box-sizing: border-box;
         width: 100%;
-        margin-bottom: 10px; /* Tambahkan jarak antar item */
+        margin-bottom: 10px; 
     }
 
     .banner__item__text {
@@ -779,27 +779,27 @@ h1 {
     }
 
     .banner__item__text h2 {
-        font-size: 12px; /* Ubah ukuran font untuk mobile */
-        margin-bottom: -20px; /* Kurangi margin bawah untuk mengurangi jarak */
+        font-size: 12px; 
+        margin-bottom: -20px; 
 		margin-top: -25px;
     }
 
     .banner__item__text span {
-        font-size: 12px; /* Ubah ukuran font untuk mobile */
-        margin-bottom: -10px; /* Kurangi margin bawah untuk mengurangi jarak */
+        font-size: 12px; 
+        margin-bottom: -10px; 
     }
 
     .banner__item__text a {
-        font-size: 12px; /* Ubah ukuran font untuk mobile */
-        letter-spacing: 0px; /* Ubah jarak antar huruf untuk mobile */
-        margin-top: -10px; /* Kurangi margin atas untuk mengurangi jarak */
+        font-size: 12px; 
+        letter-spacing: 0px; 
+        margin-top: -10px; 
     }
 }
 /*---------------------
   Categories
 -----------------------*/
 .categories {
-	background-image: url("img/bg.png"); /* Ganti dengan path gambar Anda */
+	background-image: url("img/bg.png"); 
 	background-size: cover; 
 	background-position: center;
 	background-repeat: no-repeat;
