--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -142,32 +142,13 @@ Helper CSS
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(255, 255, 255, 0.3);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.content {
-    text-align: center;
-    z-index: 1; 
-}
 
-h1 {
-    margin: 0;
-    font-size: 3rem; 
-    color: #472323; 
-    font-weight: bold; 
-}
-@media (max-width: 767px) {
-    .set-bg {
-        height: 30vh; 
-    }
-
-    h1 {
-        font-size: 1rem; 
-    }
-}
 .spad {
 	padding-top: 20px;
 	padding-bottom: 20px;
@@ -2135,6 +2116,63 @@ Breadcrumb
 	justify-content: center; 
     align-items: center; 
 }
+.content2 {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    flex-direction: column; 
+    text-align: center; 
+    padding: 20px 20px; 
+    margin-top: 10px; 
+}
+
+h1 {
+    margin: 0; 
+    font-size: 2rem;
+	font-weight: bold;  
+    color: #FF4DA3; 
+}
+
+/* Media Query untuk Responsif di Mobile */
+@media (max-width: 767px) {
+    .content2 {
+        padding: 20px 20px; 
+        margin-top: 5px; 
+    }
+
+    h1 {
+        font-size: 1.5rem; 
+    }
+}
+
+.content {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    flex-direction: column; 
+    text-align: center; 
+    padding: 20px 10px; 
+    margin-top: 10px; 
+}
+
+h1 {
+    margin: 0; 
+    font-size: 2rem; 
+	font-weight: bold; 
+    color: #FF4DA3; 
+}
+/* Media Query untuk Responsif di Mobile */
+@media (max-width: 767px) {
+    .content {
+        padding: 50px 10px; 
+        margin-top: -80px; 
+    }
+
+    h1 {
+        font-size: 1.2rem; 
+    }
+}
+
 
 /*---------------------
   About
