--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -4803,22 +4803,53 @@ h1 {
     }
 }
 
+/* Whatsapp-float */
 .whatsapp-float {
     position: fixed;
     width: 60px;
     height: 60px;
     bottom: 20px;
     right: 20px;
+    background-color: #25D366;
+    border-radius: 50%;
     color: #FFF;
     text-align: center;
     z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    transition: opacity 0.3s ease;
+    text-decoration: none;
 }
 
 .whatsapp-float img {
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: auto;
 }
 
 .whatsapp-float:hover {
     opacity: 0.8;
+}
+
+.cta-text {
+    position: fixed;
+    bottom: 90px;
+    right: 20px;
+    background-color: #ffffff;
+    color: #000000;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    z-index: 100;
+    text-align: center;
+    font-size: 14px;
+    width: 180px;
+    transition: opacity 0.3s ease;
+    opacity: 1;
+}
+
+.cta-text.hidden {
+    opacity: 0;
+    visibility: hidden;
 }
